Add a README.md and using cloudinary to host images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="header-logo" src="./img/Logo.svg" alt="Logo de Alura">
+        <img class="header-logo" src="https://res.cloudinary.com/di0cvbfdb/image/upload/v1728055151/AluraProjects/AssetsEncryptador/ovgqri5w9jvpgzq0nfx7.svg" alt="Logo de Alura">
     </header>
     <main class="container">
         <section class="container-input">
